style: make font-size in input 1 rem to prevent automatic zoom on mobile devices when the input is in focus

--- a/src/components/searchInput/searchInput.module.scss
+++ b/src/components/searchInput/searchInput.module.scss
@@ -21,6 +21,7 @@
 .input {
 	inline-size: calc(100% - 24px);
 	font-family: 'Golos Text', serif;
+	font-size: 1rem;
 
 	&:focus {
 		outline: none;
