--- a/src/components/searchResults/searchResults.module.scss
+++ b/src/components/searchResults/searchResults.module.scss
@@ -10,6 +10,8 @@
 	box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.2);
 	background-color: #fff;
 	overflow-y: scroll;
+	font-family: 'Golos Text', serif;
+	font-size: 1rem;
 
 	& li {
 		cursor: pointer;
